Got rid of logo

--- a/memo.tex
+++ b/memo.tex
@@ -26,13 +26,13 @@
 
 \memoto{James Smith} % Recipient(s)
 
-\memofrom{John Smith} % Sender(s)
+\memofrom{Alexander McRae, Olvier Tonnesen} % Sender(s)
 
-\memosubject{An Unnecessarily Complicated Title} % Memo subject
+\memosubject{The elimination of paper cups} % Memo subject
 
-\memodate{Monday, December 30, 2013} % Date, set to \today for automatically printing todays date
+\memodate{Tuesday, Oct 6, 2018} % Date, set to \today for automatically printing todays date
 
-\logo{\includegraphics[width=0.3\textwidth]{logo.png}} % Institution logo at the top right of the memo, comment out this line for no logo
+%\logo{\includegraphics[width=0.3\textwidth]{logo.png}} % Institution logo at the top right of the memo, comment out this line for no logo
 
 %----------------------------------------------------------------------------------------
 
