--- a/Proposal.tex
+++ b/Proposal.tex
@@ -44,13 +44,10 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec ante tellus. Morbi pretium risus vitae egestas suscipit. Aenean in nisl diam. Praesent eu viverra mauris. Vestibulum ac mi sem. Nulla orci arcu, dapibus ut aliquet sit amet, pellentesque eget metus. Vivamus vehicula nisi ac metus pretium consequat. Nullam faucibus bibendum enim, id sagittis lectus rutrum consequat. Phasellus sodales orci lacus, ac mollis orci luctus sit amet. Donec lectus ante, porttitor nec auctor a, commodo sed ipsum. Sed vel tellus nec neque dapibus venenatis. Curabitur feugiat nulla at enim vehicula iaculis.
-
-Vivamus at tortor id sapien pharetra sollicitudin auctor eget sem. Sed in porta sem, eu consequat tortor. Sed vestibulum non sem faucibus iaculis. Pellentesque sed porttitor enim, eget tristique ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam ut velit at dolor imperdiet lacinia ut nec odio. Sed consectetur euismod dui eget bibendum.
-
-Phasellus quis massa nisl. Vestibulum vulputate nisi velit, ut tempus mi rutrum at. Vestibulum in dignissim lorem. Aenean dui justo, sagittis ut sodales at, malesuada elementum urna. Pellentesque eu purus consequat, sagittis lectus non, tristique nisi. Pellentesque lobortis sem vitae purus convallis, ac adipiscing ante aliquet. Suspendisse potenti. Duis quam est, scelerisque ac interdum ut, consectetur vel lacus. Vestibulum non tempus tortor. Curabitur nec velit nec orci tristique dictum. Nam feugiat nisl non lorem pretium, sit amet blandit velit laoreet. Proin eu mauris ut nunc consectetur adipiscing.
-
-Proin lobortis at velit vitae sodales. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur at purus vitae urna malesuada consequat. Vestibulum quis nulla neque. Curabitur viverra tempor arcu, sit amet tristique massa viverra non. Suspendisse tincidunt lectus ac arcu laoreet, at euismod metus ultricies. In posuere metus vel nisi lobortis, sed ultrices mi pulvinar. Aliquam placerat enim gravida pellentesque adipiscing. Nulla sit amet erat nunc. Sed vitae turpis hendrerit, porta eros vel, hendrerit quam.
+\section {Overview}
+\section {Problem Description}
+\section {Plan of Action}
+\section {Conclusion}
 
 %----------------------------------------------------------------------------------------
 
