added sections and bullet points

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -24,7 +24,7 @@
 %	MEMO INFORMATION
 %----------------------------------------------------------------------------------------
 
-\memoto{James Smith} % Recipient(s)
+\memoto{Nadia Ariff} % Recipient(s)
 
 \memofrom{Alexander McRae, Olvier Tonnesen} % Sender(s)
 
@@ -44,7 +44,8 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-\section {Overview}
+\section {Purpose}
+
 \section {Problem Description}
 \section {Plan of Action}
 \section {Conclusion}
