--- a/Proposal.tex
+++ b/Proposal.tex
@@ -26,7 +26,7 @@
 
 \memoto{Nadia Ariff} % Recipient(s)
 
-\memofrom{Alexander McRae, Olvier Tonnesen} % Sender(s)
+\memofrom{Alexander McRae, Oliver Tonnesen} % Sender(s)
 
 \memosubject{The elimination of paper cups} % Memo subject
 
