rewrote the purpose

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -45,10 +45,12 @@
 %----------------------------------------------------------------------------------------
 
 \section {Purpose}
-Coffee cup waste is a huge problem at UVic. With no clear solution with keeping the coffee cups, we propose a study that looks at the feasability and effectiveness of completely getting rid of single use coffee cups and using shared mugs.
-* will help UVic reach 75\% waste diversion goal and accurately be able to quantify the effect
-* reduce the percentage of waste being 20\% to lower.
-* Get rid of paper cup recycling program
+Coffee cup waste is a huge problem at UVic. With no clear solution with keeping the coffee cups, we
+propose a study that looks at the feasability and effectiveness of completely getting rid of single
+use coffee cups and using shared mugs. This will help UVic reach 75\% waste diversion goal and 
+accurately be able to quantify the effect the program has. Also need for other paper cup projects
+will be unneeded potentially saving the University of Victoria millions.
+
 \section {Problem Description}
 
 \section {Plan of Action}
