--- a/Proposal.tex
+++ b/Proposal.tex
@@ -44,14 +44,16 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-\section {Purpose}
+\section {Purpose & Context (Client Background)}
 Coffee cup waste is a huge problem at UVic. With no clear solution with keeping the coffee cups, we
 propose a study that looks at the feasability and effectiveness of completely getting rid of single
-use coffee cups and using shared mugs. This will help UVic reach 75\% waste diversion goal and 
-accurately be able to quantify the effect the program has. Also need for other paper cup projects
-will be unneeded potentially saving the University of Victoria millions.
+use coffee cups and using shared mugs. This will help the University of Victoria reach 75\% waste 
+diversion goal and accurately be able to quantify the effect the program has. Also need for other 
+paper cup projects will be unneeded potentially saving the University of Victoria millions.
 
-\section {Problem Description}
+\section {Problem Definition}
+\subsection {Needs Statement}
+\subsection {Goals Statement}
 
 \section {Plan of Action}
 
