Added problem description to tex file

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -44,16 +44,23 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-\section {Purpose}
+\section*{Purpose}
 Coffee cup waste is a huge problem at UVic. With no clear solution with keeping the coffee cups, we propose a study that looks at the feasability and effectiveness of completely getting rid of single use coffee cups and using shared mugs.
 * will help UVic reach 75\% waste diversion goal and accurately be able to quantify the effect
 * reduce the percentage of waste being 20\% to lower.
 * Get rid of paper cup recycling program
-\section {Problem Description}
+\section*{Problem Description}
+Despite current programs to increase landfill diversion rate, ***x\%*** of
+disposable cups sold on campus at UVic are not diverted, and end up at a landfill.
+Our proposal aims to transition to 100\% sustainable liquid container use at UVic.
+We plan to achieve this goal by introducing a new rent-a-mug program similar to
+those implemented at UBC and Stanford University. A potential constraint of
+our proposal is the increase in tuition for all students to initially purchase
+and cover replacement of the mugs.
 
-\section {Plan of Action}
+\section*{Plan of Action}
 
-\section {Conclusion}
+\section*{Conclusion}
 
 %----------------------------------------------------------------------------------------
 
