added objectives subsection

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -54,6 +54,7 @@ paper cup projects will be unneeded potentially saving the University of Victori
 \section {Problem Definition}
 \subsection {Needs Statement}
 \subsection {Goals Statement}
+\subsection {Objectives}
 
 \section {Plan of Action}
 
