--- a/Proposal.tex
+++ b/Proposal.tex
@@ -44,13 +44,13 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-\section*{Purpose}
+\section* {Purpose}
 Coffee cup waste is a huge problem at UVic. With no clear solution with keeping the coffee cups, we
 propose a study that looks at the feasability and effectiveness of completely getting rid of single
 use coffee cups and using shared mugs. This will help the University of Victoria reach 75\% waste 
 diversion goal and accurately be able to quantify the effect the program has. Also need for other 
 paper cup projects will be unneeded potentially saving the University of Victoria millions.
-\section*{Purpose & Context (Client Background)}
+\section* {Purpose & Context (Client Background)}
 Despite current programs to increase landfill diversion rate, ***x\%*** of
 disposable cups sold on campus at UVic are not diverted, and end up at a landfill.
 Our proposal aims to transition to 100\% sustainable liquid container use at UVic.
@@ -58,17 +58,18 @@ We plan to achieve this goal by introducing a new rent-a-mug program similar to
 those implemented at UBC and Stanford University. A potential constraint of
 our proposal is the increase in tuition for all students to initially purchase
 and cover replacement of the mugs.
-\subsection {Needs Statement}
+\subsection* {Needs Statement}
 TODO
-\subsection {Goals Statement}
+\subsection* {Goals Statement}
 TODO
-\subsection {Objectives}
+\subsection* {Objectives}
 TODO
-\section*{Plan of Action}
+
+\section* {Plan of Action}
 \section {Problem Definition}
 
 
-\section*{Conclusion}
+\section* {Conclusion}
 
 %----------------------------------------------------------------------------------------
 
