Added bibliography (unsure if actually needed; one of the samples had one)

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -51,12 +51,13 @@ coffee cups and implementing the use of shared mugs at all UVic food services
 locations.
 \section*{Background}
 Despite current programs to increase landfill diversion rate, ***x\%*** of
-disposable cups sold on campus at UVic are not diverted, and end up at a landfill.
-Our proposal aims to transition to 100\% sustainable liquid container use at UVic.
-We plan to achieve this goal by introducing a new rent-a-mug program similar to
-those implemented at UBC and Stanford University. A potential constraint of
-our proposal is the increase in tuition for all students to initially purchase
-and cover replacement of the mugs.
+disposable cups sold on campus at UVic are not diverted, and still end up at a
+landfill.\cite{myrefitem} Our proposal aims to transition to 100\% sustainable
+liquid container use at UVic. We plan to achieve this goal by introducing a
+new rent-a-mug program similar to those implemented at UBC and Stanford
+University. A potential constraint of our proposal is the increase in
+tuition for all students to initially purchase and cover replacement of the
+mugs.
 \subsection*{Needs Statement}
 TODO
 \subsection*{Goals Statement}
@@ -70,6 +71,12 @@ TODO
 
 \section*{Conclusion}
 
+\begin{thebibliography}{9}
+	\bibitem{myrefitem}
+		The person we cited.
+		\textit{The work we cited}.
+		Publisher publishing
+\end{thebibliography}
 %----------------------------------------------------------------------------------------
 
 \end{document}
