Expanded on problem definition. Added background.

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -24,7 +24,7 @@
 %	MEMO INFORMATION
 %----------------------------------------------------------------------------------------
 
-\memoto{Nadia Ariff} % Recipient(s)
+\memoto{Nadia Ariff, Waste Reduction Manager} % Recipient(s)
 
 \memofrom{Alexander McRae, Oliver Tonnesen} % Sender(s)
 
@@ -44,38 +44,54 @@
 %	MEMO CONTENT
 %----------------------------------------------------------------------------------------
 
-\section*{Purpose}
-Disposable coffee cup waste is a huge problem at UVic. We propose a study
-that investigaes the feasability and effectiveness of eliminating single-use
-coffee cups and implementing the use of shared mugs at all UVic food services
+\section*{Objective}
+This memo provides a proposal for a study to investigae the feasability and
+effectiveness of eliminating single-use coffee cups and implementing the
+use of shared mugs at all UVic food services
 locations.
 \section*{Background}
-Despite current programs to increase landfill diversion rate, ***x\%*** of
-disposable cups sold on campus at UVic are not diverted, and still end up at a
-landfill.\cite{myrefitem} Our proposal aims to transition to 100\% sustainable
-liquid container use at UVic. We plan to achieve this goal by introducing a
-new rent-a-mug program similar to those implemented at UBC and Stanford
-University. A potential constraint of our proposal is the increase in
-tuition for all students to initially purchase and cover replacement of the
-mugs.
-\subsection*{Needs Statement}
-TODO
+Disposable coffee cup waste is a huge problem at UVic. Despite current programs
+to increase landfill diversion rate, ***x\%*** of disposable cups sold on campus
+still end up in a landfill.\cite{myrefitem} In addition to these non-diverted
+paper cups ending up in landfills and not being properly recycled, the
+production and transportation of paper cups and their raw materials has been
+shown to emit a large amount of CO$_{2}$.\cite{papercupemissions}
+% We should probably not mention carbon emissions, since that's not what
+% the RFP was about. I only really put it in so the background didn't look
+% so empty. Also, if we do keep it we'll need a better reference than the
+% one I grabbed.
+\section*{Problem Definition}
+\subsection*{Need Statement}
+Currently, the vast majority of hot beverage purchases at UVic involve a
+disposable paper cup.% Cite some UVic resource with some status supporting this
+Of UVic's total non-diverted recyclable waste, ***y\%*** consists of paper
+cups. % More stats!
 \subsection*{Goals Statement}
-TODO
+Our goal is to transition to near 100\% sustainable/reusable liquid container
+use at UVic.
 \subsection*{Objectives}
-TODO
+By implementing a rent-a-mug program similar to those already in place at
+other academic institutions,% r e f e r e n c e s
+we can immensely reduce the number of paper cups sold on campus, and in
+turn reduce the number of paper cups sent to landfills.
 
 \section*{Plan of Action}
-\section*{Problem Definition}
-
 
 \section*{Conclusion}
 
 \begin{thebibliography}{9}
-	\bibitem{myrefitem}
-		The person we cited.
-		\textit{The work we cited}.
-		Publisher publishing
+\bibitem{myrefitem}
+	Who we cited.
+	\textit{What we cited}.
+	Avaialbe at: Where we cited
+	[When we cited].
+\bibitem{papercupemissions}
+	EPS Distribution. (2018)
+	\textit{The Environmental Effect Of Paper Coffee Cups \-- EPS Distribution.}
+	Available at:
+	http://www.epsdistribution.com.au/the-environmental-effect-of-paper-coffee-cups/
+	[Accessed 26 Oct. 2018].
+
 \end{thebibliography}
 %----------------------------------------------------------------------------------------
 
