Deleted memo template contents for ease-of-reading.

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -15,34 +15,23 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[letterpaper,11pt]{texMemo} % Set the paper size (letterpaper, a4paper, etc) and font size (10pt, 11pt or 12pt)
+\documentclass[letterpaper,11pt]{texMemo}
 
-\usepackage{parskip} % Adds spacing between paragraphs
-\setlength{\parindent}{15pt} % Indent paragraphs
+\usepackage{parskip}
+\setlength{\parindent}{15pt}
+\memoto{Nadia Ariff, Waste Reduction Manager}
 
-%----------------------------------------------------------------------------------------
-%	MEMO INFORMATION
-%----------------------------------------------------------------------------------------
+\memofrom{Alexander McRae, Oliver Tonnesen}
 
-\memoto{Nadia Ariff, Waste Reduction Manager} % Recipient(s)
+\memosubject{The elimination of paper cups}
 
-\memofrom{Alexander McRae, Oliver Tonnesen} % Sender(s)
-
-\memosubject{The elimination of paper cups} % Memo subject
-
-\memodate{Tuesday, Oct 6, 2018} % Date, set to \today for automatically printing todays date
+\memodate{Tuesday, Oct 6, 2018}
 
 %\logo{\includegraphics[width=0.3\textwidth]{logo.png}} % Institution logo at the top right of the memo, comment out this line for no logo
 
-%----------------------------------------------------------------------------------------
-
 \begin{document}
 
-\maketitle % Print the memo header information
-
-%----------------------------------------------------------------------------------------
-%	MEMO CONTENT
-%----------------------------------------------------------------------------------------
+\maketitle
 
 \section*{Objective}
 This memo provides a proposal for a study to investigae the feasability and
@@ -93,6 +82,5 @@ turn reduce the number of paper cups sent to landfills.
 	[Accessed 26 Oct. 2018].
 
 \end{thebibliography}
-%----------------------------------------------------------------------------------------
 
 \end{document}
