Started Plan of Action section. Still need Gant Chart/Timeline and Conclusion.

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -54,7 +54,7 @@ shown to emit a large amount of CO$_{2}$.\cite{papercupemissions}
 Currently, the vast majority of hot beverage purchases at UVic involve a
 disposable paper cup.% Cite some UVic resource with some status supporting this
 Of UVic's total non-diverted recyclable waste, ***y\%*** consists of paper
-cups. % More stats!
+cups.% More stats!
 \subsection*{Goals Statement}
 Our goal is to transition to near 100\% sustainable/reusable liquid container
 use at UVic.
@@ -63,9 +63,54 @@ By implementing a rent-a-mug program similar to those already in place at
 other academic institutions,% r e f e r e n c e s
 we can immensely reduce the number of paper cups sold on campus, and in
 turn reduce the number of paper cups sent to landfills.
+\subsection*{Constraints}
+Our proposal has a fairly large up-front cost; however, we suspect the initial
+price to purchase the reusable mugs will be heavily outweighed by the savings
+brought by reducing the amount of paper cups that UVic Food Services has to
+purchase continuously. Mugs will undoubtedly become lost or broken, and will so
+need to be periodically replaced. We expect this cost to also be significantly
+lower than purchasing paper cups in the long run. Customers of UVic Food
+Services may be upset that they will have to change their routines due to doing
+away with paper cups.
 
 \section*{Plan of Action}
+The research plan provided below gives a brief overview of some of the questins
+we aim to investigate in regards to the implementation of reusable mugs accross
+campus.\\\\
 
+\begin{itemize}
+	\item Who uses the most paper cups?
+	\item What areas of campus are responsible for the largest amount of
+		non-diverted waste?\\
+
+	\item When do people most often drink coffee?
+	\item How many mugs will be required during peak hours?
+	\begin{itemize}
+		\item For how long do people use mugs? Do they bring them off campus?
+	\end{itemize}
+	\item Are they willing to cooperate with UVic's program, or will they
+		get their coffee elsewhere?\\
+
+	\item Is it worth implementing this program all over campus, or would it
+		make more sense to initially only target residences?
+	\item Is this program any better than those already implemented at UVic?
+	\item Investigate other institutions that have implemented similar
+		programs.\\
+		
+	\item Economic considerations:
+	\begin{itemize}
+		\item Cost/benefit analysis
+		\item Opportunity cost
+		\item Short term/long term effects
+	\end{itemize}
+	\item Environmental considerations:
+	\begin{itemize}
+		\item How much waste can be eliminated by this program?
+		\item How does the manufacturing/transport of the mugs affect the
+			environment? Is it better or worse than that of paper cups?
+	\end{itemize}
+
+\end{itemize}
 \section*{Conclusion}
 
 \begin{thebibliography}{9}
