--- a/Proposal.tex
+++ b/Proposal.tex
@@ -96,7 +96,7 @@ campus.\\\\
 	\item Is this program any better than those already implemented at UVic?
 	\item Investigate other institutions that have implemented similar
 		programs.\\
-		
+
 	\item Economic considerations:
 	\begin{itemize}
 		\item Cost/benefit analysis
@@ -111,7 +111,20 @@ campus.\\\\
 	\end{itemize}
 
 \end{itemize}
+\section*{Qualifications}
+TODO
 \section*{Conclusion}
+Disposable coffee cup waste is one of the largest areas of potential
+improvement with respect to waste diversion.  Implementing a rent-a-mug
+program has the potential to help UVic to reach its goal of 75\% waste diversion
+by 2021.
+\newline
+\newline
+Our proposed study would determine the feasibility of implementing such a
+program. It would investigate the benefits, drawbacks, and the overall cost,
+both in the sort- and in the long-term. Undertaking this study would not cost
+much to UVic, but could potentially lead to greatly reduced waste production
+all over its campus.
 
 \begin{thebibliography}{9}
 \bibitem{myrefitem}
